<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.didiglobal.turbo</groupId>
    <artifactId>turbo</artifactId>
    <packaging>pom</packaging>
    <version>1.2.0</version>
    <name>turbo</name>
    <description>Turbo is a light-weight flow engine framework, support BPMN2.0</description>
    <url>https://www.github.com/didi/turbo</url>

    <scm>
        <connection>scm:git:git@github.com:didi/turbo.git</connection>
        <developerConnection>scm:git:ssh://github.com:didi/turbo.git</developerConnection>
        <url>https://github.com/didi/turbo</url>
    </scm>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>liangchenhui</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
        <developer>
            <name>jameszhangxiao</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
        <developer>
            <name>luoyang</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
        <developer>
            <name>lijinghao</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
        <developer>
            <name>zuokai</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
        <developer>
            <name>lanzhengjian</name>
            <organization>Didi</organization>
            <organizationUrl>http://www.didiglobal.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>engine</module>
        <module>demo</module>
        <module>parallel-plugin</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <spring-boot.version>3.2.2</spring-boot.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
        <druid.version>1.2.18</druid.version>
        <baomidou-mybatis-plus.version>3.5.5</baomidou-mybatis-plus.version>
        <baomidou-dynamic-datasource.versioin>4.2.0</baomidou-dynamic-datasource.versioin>
        <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
        <fastjson.version>1.2.83</fastjson.version>
        <groovy.version>3.0.21</groovy.version>
        <guava.version>32.1.3-jre</guava.version>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-3-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector-java.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${baomidou-mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
                <version>${baomidou-dynamic-datasource.versioin}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-aop</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.uuid</groupId>
                <artifactId>java-uuid-generator</artifactId>
                <version>${java-uuid-generator.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.annotation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>${jakarta.annotation-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>java21-doclint-disabled</id>
            <activation>
                <jdk>[21,)</jdk>
            </activation>
            <properties>
                <javadoc.opts>-Xdoclint:none</javadoc.opts>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
                            <additionalparam>${javadoc.opts}</additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>ossrh</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>